--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,10 +1,11 @@
 .header {
+  background-color: #f0a6a6;
   background: -moz-linear-gradient(
     left,
     rgba(242, 246, 248, 1) 0%,
     rgba(216, 225, 231, 1) 50%,
     rgba(181, 198, 208, 1) 51%,
-    rgba(224, 239, 249, 1) 100%
+    rgb(68, 127, 167) 100%
   );
 }
 
@@ -14,7 +15,7 @@
 }
 
 .header__title {
-  font-family: "Lucida Console", Monaco, monospace;
+  font-family: "Arial Black", Gadget, sans-serif;
   color: $dark-blue;
   text-align: center;
   text-decoration: none;
