--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -3,3 +3,9 @@
   padding: 0 $m-size;
   max-width: 100rem;
 }
+
+.page-container {
+  margin: 0 auto;
+  padding: 0 $m-size;
+  max-width: 640px;
+}
