--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -14,6 +14,7 @@ $font-size-large: 1.4rem;
 $font-size-small: 1.0rem;
 
 // Spacing
+$xs-size: .5rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
