--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -1,6 +1,6 @@
 .box-lo {
   align-items: center;
-  background-color: #83eeee;
+  background-color: #fff;
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -12,7 +12,7 @@
 
 .box-lo__frame {
   align-items: center;
-  background-color: #83eeee;
+  background-color: #c2f7d3;
   background-position: center;
   background-size: cover;
   display: flex;
