--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,7 +5,7 @@
   height: 6 0px;
   width: 100%;
   text-align: center;
-  background: $light-aqua;
+  background: $off-white;
   opacity: 0.4;
   transition: 0.3s;
 }
@@ -59,6 +59,6 @@ li a {
 }
 
 li a:hover:not(.active) {
-  box-shadow: inset 0 0 0 10px $light-aqua;
+  box-shadow: inset 0 0 0 10px $off-white;
   opacity: 0.5;
 }
