--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,17 +1,17 @@
 .header {
-  background-color: #f0a6a6;
+  background-color: #ecf0e5;
   background: -moz-linear-gradient(
     left,
     rgba(242, 246, 248, 1) 0%,
-    rgba(216, 225, 231, 1) 50%,
-    rgba(181, 198, 208, 1) 51%,
+    rgb(178, 195, 206) 50%,
+    rgb(127, 150, 163) 51%,
     rgb(68, 127, 167) 100%
   );
 }
 
 .header__content {
   justify-content: space-between;
-  padding: $s-size 0;
+  padding: $xs-size 0;
 }
 
 .header__title {
@@ -44,7 +44,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-  box-shadow: inset 0 0 0 10px $light-aqua;
+  box-shadow: inset 0 0 0 2px $light-aqua;
   opacity: 0.5;
 }
 
