--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,4 +6,5 @@
 @import "./components/footer";
 @import "./components/card";
 @import "./components/menu-layout";
+@import "./components/resume";
 @import "./components/loader";
