--- a/src/components/with_hooks/hook.css
+++ b/src/components/with_hooks/hook.css
@@ -6,29 +6,30 @@
   justify-content: center;
   text-align: center;
   color: white;
-  background-color: crimson;
+  background-color: rgb(109, 162, 192);
 }
 
 .hook-Header {
+  max-height: 50vh;
   align-items: center;
   justify-content: center;
 }
 
 .hook-Hook {
   background-color: blue;
-  min-height: 45vh;
+  max-height: 33vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Times New Roman', Times, serif;
   font-size: 25px;
-  color: white;
+  color: rgb(53, 141, 87);
 }
 
 .hook-Example {
-  background-color: chocolate;
-  min-height: 45vh;
+ 
+  max-height: 33vh;
   display: flex;
   flex-direction: column;
   align-items: center;
