--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,7 +15,7 @@
 }
 
 .header__title {
-  font-family: "Arial Black", Gadget, sans-serif;
+  font-family: "Oswald", sans-serif;
   color: $dark-blue;
   text-align: center;
   text-decoration: none;
