--- a/src/styles/components/_menu-layout.scss
+++ b/src/styles/components/_menu-layout.scss
@@ -1,6 +1,15 @@
 .parent {
+  display: flex;
+  height: auto;
+  flex-wrap: wrap;
   margin: inherit;
   padding: 2 px;
+}
+
+.child {
+  width: 100px;  /* Or whatever */
+  height: 100px; /* Or whatever */
+  margin: auto;  /* Magic! */
 }
 
 .col-left {
@@ -25,7 +34,7 @@
 
 @media only screen and (min-width: 641px) {
   .parent {
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -105,16 +114,17 @@
 }
 
 .col-xs-6 {
-  flex-basis: 50%;
+  flex-basis: 100%;
   float: left;
   padding: 10px;
   
 }
 
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
-  display: table;
+  display: flex;
   clear: both;
 }
 
