--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -43,3 +43,8 @@
   text-decoration: none;
   margin: 0 0 0;
 }
+
+.img-responsive {
+  background: url("/images/python_if.jpg") top right no-repeat;
+  background-position: center;
+}
